test/types/range/cast-assign-init/illegal-bug-2.good
illegal-bug-2.chpl:8: error: initializing a range with idxType bool from a range with idxType uint(64)
