test/types/range/cast-assign-init/illegal-bug-2.prediff
illegal-bug-1.prediff